cleaned up routes and changed route names